--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "zone.js": "0.5.15"
   },
   "devDependencies": {
+    "angular2-auto-scroll": "^1.0.12",
     "awesome-typescript-loader": "^0.16.0-rc.0",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
